--- a/pages/index/list.wxml
+++ b/pages/index/list.wxml
@@ -5,11 +5,11 @@
     <text class="down"></text>
   </view>
   <view style="flex:1">
-    <text class="smalltext t ">美食</text>
+    <text class="smalltext t ">时间</text>
     <view class="down"></view>
   </view>
   <view style="flex:1">
-    <text class="smalltext t ">美食</text>
+    <text class="smalltext t ">地点</text>
     <view class="down"></view>
   </view>
 
@@ -33,7 +33,7 @@
       <text style="font-size:10pt;color:#656565">月售1663单</text>
     </view>
     <view class="">
-      <text style="font-size:10pt;color:#656565">起送价￥0|配送￥9</text>
+      <text style="font-size:10pt;color:#656565">起送价￥15|配送￥4</text>
     </view>
   </view>
   <view>
@@ -44,7 +44,7 @@
       <text style="font-size:10pt;color:#656565">31分钟</text>
     </view>
     <view class="">
-      <text class="allocation">美团专送</text>
+      <text class="allocation">蜂鸟专送</text>
     </view>
   </view>
 </view>
